--- a/lib/core/localization/intl_en.arb
+++ b/lib/core/localization/intl_en.arb
@@ -5,5 +5,6 @@
   "todo_title": "Title",
   "todo_description": "Description",
   "todo_search": "Search...",
+  "todo_list_empty": "The list is empty",
   "can_not_empty": "Can not be empty."
 }
